Few changes in ECommerce Imported from Changeset 2260

--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -1062,7 +1062,7 @@ fieldset[disabled] .btn-primary:hover {
 
 .product-thumb .image {
   text-align: center;
-  background-color: #f3f3f3;
+  /*background-color: #f3f3f3;*/
   border-radius: 4px;
 }
 
