--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -19,8 +19,8 @@
 
 
                             <li>
-                                <a class="thumbnail" href="@(!string.IsNullOrEmpty(productPath.FirstOrDefault()?.FilePath)?ViewBag.BaseFilePath + productPath.FirstOrDefault()?.FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.png")" title="#">
-                                    <img data-zoom-image="@(!string.IsNullOrEmpty(productPath.FirstOrDefault()?.FilePath)?ViewBag.BaseFilePath + productPath.FirstOrDefault()?.FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.png")" src="@(!string.IsNullOrEmpty(productPath.FirstOrDefault()?.FilePath)?ViewBag.BaseFilePath + productPath.FirstOrDefault()?.FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.png")" id="zoom_03" class="img-responsive center-block" alt="image">
+                                <a class="thumbnail" href="@(!string.IsNullOrEmpty(productPath.FirstOrDefault()?.FilePath)?ViewBag.BaseFilePath + productPath.FirstOrDefault()?.FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.gif")" title="#">
+                                    <img data-zoom-image="@(!string.IsNullOrEmpty(productPath.FirstOrDefault()?.FilePath)?ViewBag.BaseFilePath + productPath.FirstOrDefault()?.FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.gif")" src="@(!string.IsNullOrEmpty(productPath.FirstOrDefault()?.FilePath)?ViewBag.BaseFilePath + productPath.FirstOrDefault()?.FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.gif")" id="zoom_03" class="img-responsive center-block" alt="image">
                                 </a>
                             </li>
 
@@ -36,8 +36,8 @@
                                             {
                                                 <div class="col-xs-12">
 
-                                                    <a data-zoom-image="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.png")" data-image="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.png")" href="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.png")">
-                                                        <img src="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.png")" class="img-responsive center-block" alt="additional image">
+                                                    <a data-zoom-image="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.gif")" data-image="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.gif")" href="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.gif")">
+                                                        <img src="@(!string.IsNullOrEmpty(productPath[i].FilePath)?ViewBag.BaseFilePath + productPath[i].FilePath:ViewBag.BaseFilePath + "/Areas/Shop/Content/app/img/product/no_image.gif")" class="img-responsive center-block" alt="additional image">
                                                     </a>
                                                 </div>
                                             }
