--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -25,19 +25,19 @@
                     <form action="#" method="post" enctype="multipart/form-data" id="form-currency">
                         <div class="btn-group">
                             <button class="btn btn-link dropdown-toggle test" data-toggle="dropdown">
-                                <strong>$</strong>
+                                <strong>£</strong>
                                 <span>Currency</span>&nbsp;<i class="fa fa-angle-down"></i>
                             </button>
                             <ul class="dropdown-menu">
-                                @*<li>
+                                <li>
                                         <button class="currency-select btn btn-link btn-block" type="button" name="EUR">€ Euro</button>
-                                    </li>*@
+                                    </li>
                                 <li>
                                     <button class="currency-select btn btn-link btn-block" type="button" name="GBP">£ Pound Sterling</button>
                                 </li>
-                                @*<li>
+                                <li>
                                         <button class="currency-select btn btn-link btn-block" type="button" name="USD">$ US Dollar</button>
-                                    </li>*@
+                                    </li>
                             </ul>
                         </div>
                         <input type="hidden" name="code" value="" />
