--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -1,8 +1,6 @@
 ﻿@using Ganedata.Core.Entities.Domain
 
-<div class="headerMenu">
-    <div class="container hidden-xs">
-        <div class="row">
+<div class="headerMenu row">
             @*<div class="col-md-3 col-sm-4 stmenu"></div>*@
             <div id="menu1" class="col-md-9 col-sm-8 stme2 nav-menue">
 
@@ -58,8 +56,6 @@
                     </ul>
                 </div>
             </div>
-        </div>
-    </div>
 </div>
 <div class="hidden-md hidden-lg hidden-sm horizontal-menu">
     <div class="row">
