--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
@@ -67,13 +67,13 @@
                                                     <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                                     <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                                 </div>
-                                                <p class="pricedis price text-right"><span class="price-new"> $ items.SellPrice</span> <span class="price-old">$344.00</span></p>
+                                               @* <p class="pricedis price text-right"><span class="price-new"> $ 200</span> <span class="price-old">$344.00</span></p>*@
                                             </div>
-                                            <div class="button-group">
-                                                <button type="button" class="acart" onclick="AddToCart(items.ProductId)">
+                                            @*<div class="button-group">
+                                                <button type="button" class="acart" onclick="AddToCart()">
                                                     <span>Add to Cart</span>
                                                 </button>
-                                            </div>
+                                            </div>*@
                                         </div>
                                     </div>
                                 }
