--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -51,6 +51,12 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
                                         </div>
+                                        <div class="clearfix"></div>
+                                        <div class="button-group">
+                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                                <span>Add to Cart</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -83,6 +89,12 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
                                         </div>
+                                        <div class="clearfix"></div>
+                                        <div class="button-group">
+                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                                <span>Add to Cart</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -114,6 +126,12 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                        <div class="button-group">
+                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                                <span>Add to Cart</span>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
