--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -95,7 +95,8 @@
                                     <button type="button" class="form-control pull-left btn-number btnminus" disabled="disabled" data-type="minus" data-field="quantity">
                                         <span class="glyphicon glyphicon-minus"></span>
                                     </button>
-                                    <input id="input-quantity" type="text" name="quantity" value="1" size="2" class="form-control input-number pull-left" />
+                                    <input id="input-quantity" type="text" name="quantity" value="1" size="2" class="form-control input-number pull-left" data-detail="true" />
+                                    
                                     <input type="hidden" name="product_id" value="30" />
                                     <button type="button" class="form-control pull-left btn-number btnplus" data-type="plus" data-field="quantity">
                                         <span class="glyphicon glyphicon-plus"></span>
